--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ python-decouple = "^3.8"
 aiofiles = "^23.2.1"
 psycopg2-binary = "^2.9.9"
 asyncpg = "^0.29.0"
+python-multipart = "^0.0.9"
 
 
 [build-system]
